# CLI-Weather-Dashboard

./: .gitignore  Makefile  README.md  check_syntax.py  pyproject.toml  test_ui.py
.github/workflows/: ci.yml
src/weather_cli/: config.py  persistence.py  utils.py  weather.py  weather_dashboard.py
tests/: conftest.py  test_main.py  test_utils.py  test_weather.py
